<resources>
    <string name="app_name">金融助手v2</string>
    <string name="action_settings">Settings</string>

    <!-- common -->
    <string name="common_make_dir_error">写入失败，请确定允许SD卡相关权限</string>
    <string name="common_loading">加载中,请稍后...</string>
    <string name="common_net_warning">当前网络不给力啊</string>
    <string name="common_net_cancel">网络请求已取消</string>
    <string name="common_net_exceptional">网络请求异常，请重试</string>
    <string name="common_double_click_exit_tip">再次点击退出金融助手</string>
    <string name="common_tip">提示</string>
    <string name="common_get_statue_err">获取当前登录状态失败，请重新登录</string>
    <string name="common_long_test_word">北京市海淀区王庄路1号清华同方科技广场B座25层北龙中网科技有限公司</string>
    <string name="common_short_test_word">可信产品研发部</string>

    <!-- 主页 -->
    <string name="home_bar">首页</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_error">登录失败</string>
    <string name="login">登 录</string>
    <string name="login_waiting">登录中,请稍后...</string>
    <string name="home_exit_unUpload_task">检测到有未上传的下户数据，是否继续上传?</string>
    <string name="home_wait_review">待下户(个)</string>
    <string name="home_wait_modify">待修改(个)</string>
    <string name="home_new_tip">最新待接单</string>

    <!-- 下户 -->
    <string name="review_take_order">接单</string>
    <string name="review_title">下户</string>
    <string name="review_base_info">基本信息</string>
    <string name="review_wait">待下户</string>
    <string name="review_pics">下户照片</string>
    <string name="review_audio">下户录音</string>
    <string name="review_video">下户视频</string>
    <string name="review_remark">下户建议</string>
    <string name="review_file_list">下户资料</string>
    <string name="review_waite_mark">(待录入)</string>
    <string name="review_use_exist_data">使用已有下户内容</string>

    <!-- 进度 -->
    <string name="schedule_title">进度查询</string>

    <!-- 物流 -->
    <string name="wuliu_title">物流录入</string>

    <!-- 上传 -->
    <string name="upload_bar">传输列表</string>

    <string name="nearby">查找周边</string>

    <!-- 更多 -->
    <string name="more_bar">更多</string>
    <string name="more_name">账户名称</string>
    <string name="more_change_pwd">修改密码</string>
    <string name="more_wifi_only">仅在WiFi下上传</string>
    <string name="more_check_update">检查更新</string>
    <string name="more_help">帮助</string>
    <string name="more_about">关于</string>
    <string name="more_logout">退出登录</string>
    <string name="more_phone">电话</string>
    <string name="more_save">保存</string>
    <string name="more_normal_pwd">原始密码</string>
    <string name="more_new_pwd">新密码</string>
    <string name="more_confirm_pwd">确认密码</string>
    <string name="more_help_title">下户调查拍照要点</string>
    <string name="more_help_phone">010-58813333</string>
    <string name="more_help_tips_1">1.申请人填写申请信息及贷款资料</string>
    <string name="more_help_tips_2">2.经营场所</string>
    <string name="more_help_tips_3">3.居住信息</string>
    <string name="more_help_tips_4">4.工作信息</string>
    <string name="more_help_tips_content_1">拍摄重点为确认申请表为借款人亲自填写并签字确认，申请人提供资料均为原件。</string>
    <string name="more_help_tips_content_2">经营场所包括办公地址、厂房和仓库。亲访地址并全程拍摄，核实与申请表填写的经营地址是否完全相符；经营场所环境、经营状态、工作人员数量、主要设备名称和数量等。</string>
    <string name="more_help_tips_content_3">拍摄重点为居住地址与申请资料提供的地址是否完全相符（门牌号、面积）；在无法提供居住地址证明的情况下，确认居住地址真实、稳定。</string>
    <string name="more_help_tips_content_4">拍摄重点为确认借款人工作单位、职务的真实性。与其工作单位人事或其他同事核实，详细记录核实人姓名和了解内容。</string>
    <string name="about_knet_copyright">北龙中网 版权所有</string>
    <string name="about_knet_copyright2">Copyright©2016 knet.cn All Rights Reserved</string>
    <string name="more_pwd_length_err">密码长度在6-32个字符之间</string>
    <string name="more_pwd_compare_err">两次输入密码不一致</string>
    <string name="more_pwd_success">密码修改成功</string>
    <string name="more_logout_tip">确认退出当前账户?</string>
    <string name="more_check_version">正在获取新版本信息...</string>
    <string name="more_new_version_title">发现新版本</string>
    <string name="down_state">正在下载：%s</string>
    <string name="down_err">下载失败</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_app_start">AppStartActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_more_help">MoreHelpActivity</string>


</resources>
