<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_more"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/base_app" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tb_more"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/ll_help_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/help_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text="@string/more_help_title"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <View
                    android:id="@+id/iv_help_sep"
                    android:layout_below="@id/ll_help_title"
                    style="@style/split_line" />

                <TextView
                    android:id="@+id/tv_help_tip_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_help_sep"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/more_help_tips_1"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_help_tip_content_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_help_tip_1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/more_help_tips_content_1"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_help_tip_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_help_tip_content_1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/more_help_tips_2"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_help_tip_content_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_help_tip_2"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/more_help_tips_content_2"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_help_tip_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_help_tip_content_2"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/more_help_tips_3"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_help_tip_content_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_help_tip_3"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/more_help_tips_content_3"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_help_tip_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_help_tip_content_3"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/more_help_tips_4"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_help_tip_content_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_help_tip_4"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/more_help_tips_content_4"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
