<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/base_stroke"/>

    <com.lzy.widget.AlphaIndicator
        android:id="@+id/alphaIndicator"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <com.lzy.widget.AlphaView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:av_tabIconNormal="@mipmap/main_tab_home_0"
            app:av_tabIconSelected="@mipmap/main_tab_home_1"
            app:av_tabText="@string/home_bar"
            app:av_tabTextSize="14sp"
            app:av_textColorNormal="#999999"
            app:av_textColorSelected="@color/base_app"/>

        <com.lzy.widget.AlphaView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:av_tabIconNormal="@mipmap/main_tab_transport_0"
            app:av_tabIconSelected="@mipmap/main_tab_transport_1"
            app:av_tabText="@string/upload_bar"
            app:av_tabTextSize="14sp"
            app:av_textColorNormal="#999999"
            app:av_textColorSelected="@color/base_app"/>

        <com.lzy.widget.AlphaView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:av_tabIconNormal="@mipmap/main_tab_more_0"
            app:av_tabIconSelected="@mipmap/main_tab_more_1"
            app:av_tabText="@string/more_bar"
            app:av_tabTextSize="14sp"
            app:av_textColorNormal="#999999"
            app:av_textColorSelected="@color/base_app"/>
    </com.lzy.widget.AlphaIndicator>
</LinearLayout>