<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/base_app" />

    <ImageView
        android:id="@+id/iv_about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="80dp"
        android:background="@mipmap/about_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_about_logo"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tv_about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_about_vername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/tv_about_app_name"
            android:textColor="@color/text_color"
            android:textSize="22sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/about_knet_copyright"
        android:textColor="@color/text_color"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/tv_about_copyright2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/about_knet_copyright2"
        android:textColor="@color/text_color"
        android:textSize="14sp" />
</RelativeLayout>