<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    android:orientation="vertical"
    tools:context="cn.knet.seal.financial.ui.activity.ReviewFilesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_review_pics"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/item_press_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/review_pics"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/tv_review_pic_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/review_waite_mark"
                android:textColor="@color/text_color_orange" />
        </LinearLayout>

        <View style="@style/view_line" />

        <LinearLayout
            android:id="@+id/ll_review_audio"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/item_press_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/audio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/review_audio"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/tv_review_audio_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/review_waite_mark"
                android:textColor="@color/text_color_orange" />
        </LinearLayout>

        <View style="@style/view_line" />

        <LinearLayout
            android:id="@+id/ll_review_video"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/item_press_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/review_video"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/tv_review_video_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/review_waite_mark"
                android:textColor="@color/text_color_orange" />
        </LinearLayout>

        <View style="@style/view_line" />

        <LinearLayout
            android:id="@+id/ll_review_remark"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/item_press_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/remark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/review_remark"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/tv_review_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/review_waite_mark"
                android:textColor="@color/text_color_orange" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
