<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/base_bg">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@mipmap/login_logo" />

    <TextView
        android:id="@+id/tv_login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_login_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:padding="13dp"
        android:textColor="#000"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/rl_login_mobile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tv_login_app_name"
        android:background="#fff"
         >

        <ImageView
            android:id="@+id/iv_login_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@mipmap/login_mobile" />

        <EditText
            android:id="@+id/et_login_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_login_mobile"
            android:layout_toEndOf="@id/iv_login_mobile"
            android:background="#fff"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="17sp"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="15"
            android:text="wxj"
            android:hint="@string/login_name_hint" />
    </RelativeLayout>
        <View 
            android:id="@+id/iv_login_sep"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/rl_login_mobile"
            android:background="@color/base_stroke"
            />

    <RelativeLayout
        android:id="@+id/rl_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/iv_login_sep"
        android:background="#fff" >

        <ImageView
            android:id="@+id/iv_login_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@mipmap/login_pwd" />

        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toRightOf="@id/iv_login_pwd"
            android:layout_toEndOf="@id/iv_login_pwd"
            android:textSize="17sp"
            android:inputType="textPassword"
            android:maxLength="18"
            android:text="abc123"
            android:background="#fff"
            android:hint="@string/login_pwd_hint" />
    </RelativeLayout>
    <com.rey.material.widget.Button
        android:id="@+id/btn_login"
        android:layout_below="@id/rl_login_pwd"
        style="@style/LightFlatWaveButtonRippleStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:text="@string/login"
        app:rd_enable="true"/>
</RelativeLayout>